# ClaudeMultiAgentTemplate

./: .gitignore  CUSTOMIZATION.md  DEMO.md  INSTALLATION.md  PROJECT_README.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.py
.claude/: AGENT_CONTRACTS.json  INSTALLATION_GUIDE.md  README.md  TASK_PROMPT_DEFAULTS.md  WORKFLOW_GUIDE.md  manifest.json  pyproject.toml  settings.json
.claude/agents/: AGENT_TEMPLATE.md  agent-architect.md  agents.json  architect.md  atlassian-integration-coordinator.md  documenter.md  generate_agents_json.sh  github-integration-coordinator.md  implementer.md  integration-coordinator.md  requirements-analyst.md  tester.md
.claude/cmat/: __init__.py  __main__.py  cmat.py  utils.py
.claude/cmat/claude/: client.py
.claude/cmat/models/: __init__.py  claude_model.py  enhancement.py  learning.py  step_transition.py  task.py  task_metadata.py  tool.py  workflow_step.py  workflow_template.py
.claude/cmat/services/: __init__.py  agent_service.py  learnings_service.py  model_service.py  queue_service.py  skills_service.py  task_service.py  tools_service.py  workflow_service.py
.claude/cmat/tests/: __init__.py  test_queue_service.py  test_task.py  test_task_service.py
.claude/data/: learnings.json  models.json  task_queue.json  workflow_templates.json
.claude/docs/: CLI_REFERENCE.md  COST_TRACKING.md  CUSTOMIZATION_GUIDE.md  ENHANCEMENT_GUIDE.md  INTEGRATION_GUIDE.md  LEARNINGS_GUIDE.md  MCP_INTEGRATION_QUICKSTART.md  PROMPT_SYSTEM_GUIDE.md  QUEUE_SYSTEM_GUIDE.md  SCRIPTS_REFERENCE.md  SKILLS_GUIDE.md  STATUS_COMPLETION.md  TASK_PROMPT_DEFAULTS.md  UI_MIGRATION_PLAN.md  UI_SERVICE_INTEGRATION.md  UNDERSTANDING_PROMPTS.md  WORKFLOW_GUIDE.md  WORKFLOW_TEMPLATE_GUIDE.md
.claude/docs/archive/python_migration/: cmat-migration-plan.md  implementation-guide.md
.claude/docs/python_migration/: cmat-gap-analysis.md  cost-extraction-plan.md  python-implementation-review.md
.claude/enhancement-templates/: bugfix_template.md  enhancement_template_lg.md  enhancement_template_sm.md
.claude/hooks/: on-session-end-cost.sh  on-subagent-stop.sh
.claude/mcp-servers/: MCP_INTEGRATION_QUICKSTART.md
.claude/models/: models.json
.claude/queues/: queue_manager.sh  task_queue.json  workflow_templates.json
.claude/scripts/: agent-commands.sh  cmat.sh  common-commands.sh  integration-commands.sh  queue-commands.sh  skills-commands.sh  workflow-commands.sh
.claude/skills/api-design/: SKILL.md
.claude/skills/api-documentation/: SKILL.md
.claude/skills/architecture-patterns/: SKILL.md
.claude/skills/bug-triage/: SKILL.md
.claude/skills/code-refactoring/: SKILL.md
.claude/skills/desktop-ui-design/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/requirements-elicitation/: SKILL.md
.claude/skills/sql-development/: SKILL.md
.claude/skills/technical-writing/: SKILL.md
.claude/skills/test-coverage/: SKILL.md
.claude/skills/test-design-patterns/: SKILL.md
.claude/skills/user-story-writing/: SKILL.md
.claude/skills/web-ui-design/: SKILL.md
.claude/tests/: conftest.py  test_integration.py  test_models.py  test_services.py
demo/: calculator.py  reset_demo.sh  test_calculator.py
docs/: README.md  SYSTEM_REFERENCE.md  USER_GUIDE.md
(+116 files in other folders)
