[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmat"
version = "8.2.0"
description = "Claude Multi-Agent Template - A Python framework for orchestrating multi-agent workflows using Claude"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["claude", "ai", "agents", "workflow", "automation"]
authors = [
    { name = "CMAT Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cmat = "cmat.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["cmat"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]